<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HW7_ContactProvider</string>
    <string name="action_settings">Settings</string>
    <string name="and_contact">Add Contact</string>
    <string name="show_contacts">Show All</string>
    <string name="delete">Delete All</string>
    <string name="name">name</string>
    <string name="number">number</string>
    <string name="title_contact">Add Contact</string>
    <string name="lable_name">Name</string>
    <string name="lable_sex">Sex</string>
    <string name="lable_m">M</string>
    <string name="lable_f">F</string>
    <string name="lable_phone">Phone</string>
    <string name="lable_email">Email</string>
    <string name="lable_postal_address">Postal Address</string>
    <string name="bt_save">Save</string>
    <string name="send_to_friends">Send to Friends</string>
    <string name="menu_preferences">Preferences</string>

</resources>
