<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal" >
    <Button
        android:onClick="goAndcontact"
        android:id="@+id/bt_andcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and_contact"
        android:textSize="15sp" />

    <Button
        android:onClick="showAll"
        android:id="@+id/bt_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_contacts"
        android:textSize="15sp" />

    <Button
        android:onClick="deleteAll"
        android:id="@+id/bt_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="15sp" />
    </LinearLayout>
    
    <View
    android:layout_width="match_parent"
    android:layout_height="20dp" />
    
    <ListView 
        android:id="@+id/lv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    </ListView>

   
</LinearLayout>